--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 WORKING_DIR="../output"
 DB_TABLE=driven_distances
 
+#####################################################
+# DB config
+#####################################################
 DB_HOST=db
 DB_DATABASE=db
 DB_USERNAME=root
