--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,55 @@
 version: "3"
-services:
-    # Definition of container for DB
-    db:
-        image: mysql:5.7-debian
-        environment:
-            MYSQL_DATABASE: "${DB_DATABASE}"
-            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-        volumes:
-            - ./output/db:/var/lib/mysql
-            - ./.docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
-        
-    # Definition of container for running the job
-    job:
-        image: job
-        build: 
-            context: ./
-            dockerfile: ./.docker/job/Dockerfile
-        command: -f /workdir/input/bern.csv -o /workdir/output/bern.csv -l mysql
-        env_file:
-            - ./.env
-        links:
-            - "db"
-        volumes:
-            - ./output:/workdir/output
-            - ./input:/workdir/input
-    
-    # Definitions for running the service
-    service:
-        user: "${UID}:${GID}"
-        image: service
-        build: 
-            context: ./
-            dockerfile: ./.docker/service/Dockerfile
-            args:
-                name: "${USER}"
-                uid: "${UID}"
-                gid: "${GID}"
-        entrypoint: ["python", "-m", "flask", "run"]
-        environment:
-            FLASK_APP: "service.py"
-            FLASK_RUN_HOST: "0.0.0.0"
-        working_dir: /home/${USER}/service
-        links:
-            - "db"
-        volumes:
-            - ./service:/home/${USER}/service
 
-    server:
-        image: nginx:1.17
-        ports:
-            - 8000:80
-        volumes:
-            - ./.docker/nginx:/etc/nginx/conf.d
-        links:
-            - "service"
+services:
+  db:
+    image: mysql:5.7-debian
+    environment:
+      MYSQL_DATABASE: "${DB_DATABASE}"
+      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+    volumes:
+      - db-data:/var/lib/mysql
+      - ./.docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    
+  job:
+    image: job
+    build: 
+      context: ./
+      dockerfile: ./.docker/job/Dockerfile
+    command: -f /workdir/input/bern.csv -o /workdir/output/bern.csv -l mysql
+    env_file:
+      - ./.env
+    links:
+      - "db"
+    volumes:
+      - ./output:/workdir/output
+      - ./input:/workdir/input
+  
+  service:
+    image: service
+    build: 
+      context: ./
+      dockerfile: ./.docker/service/Dockerfile
+    env_file:
+      - ./.env
+    environment:
+      FLASK_APP: "api.service:create_service"
+      FLASK_RUN_HOST: "0.0.0.0"
+    working_dir: /workdir
+    links:
+      - "db"
+    volumes:
+      - ./api:/workdir
+    ports:
+      - 5000:5000
+
+  server:
+    image: nginx:1.17
+    ports:
+      - 8000:80
+    volumes:
+      - ./.docker/nginx:/etc/nginx/conf.d
+    links:
+      - "service"
+
+volumes:
+  db-data:
