--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,7 @@ cryptography = "^44.0.0"
 mypy = "^1.14.0"
 pytest = "^8.3.4"
 testcontainers = "^4.9.0"
+ruff = "^0.8.4"
 
 [build-system]
 requires = ["poetry-core"]
