--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Secrets
 .env
+.k8s/definitions/secrets.yml
 
 # Python
 __pycache__/
@@ -8,6 +9,7 @@ __pycache__/
 **/*.egg-info/
 
 # Data
+.k8s/definitions/input.yml
 input/*
 !input/bern.csv
 output/*
